# ai-intelligence-platform

./: README.md  main.py  pyproject.toml  weekly_log.md
src/ai_intelligence_platform/: application.py  company.py
src/ai_intelligence_platform/ingestion/: crunchbase.py
