[project]
name = "ai-intelligence-platform"
version = "0.1.0"
description = "A Python project for collecting data on the AI ecosystem."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.34.2",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
